--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,7 +9,7 @@
   <div class='center'>
     <div class='title'>Classify Fruit Images 🐻</div>
     <p>
-      Use images of <strong>Lets see what Fruit You are Having today By just uploading an Image</strong> 
+      Use images of <strong>See what Fruit You are Having today By just uploading an Image</strong> 
     </p>
     <div class='content'>
       <div class='no-display'>
