--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Fruit Images 🐻</div>
+    <div class='title'>🍓🍒🌳🌴Classify Fruit Images 🍈🍉🍊🍋🍌</div>
     <p>
       Use images of <strong>See what Fruit You are Having today By just uploading an Image</strong> 
     </p>
